--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@types/react-dom": "^18.2.18",
     "http-server": "^14.1.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "4.0.3",
     "vercel": "^33.4.1",
     "web-vitals": "^1.0.1"
